--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.13",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-monaco-editor": "^0.59.0",
     "react-router-dom": "^7.8.2",
     "react-select": "^5.10.2",
     "tailwind-merge": "^3.3.1",
