--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.19.0",
     "@monaco-editor/react": "^4.7.0",
     "@react-icons/all-files": "^4.1.0",
     "@tailwindcss/vite": "^4.1.13",
@@ -22,6 +23,8 @@
     "react-monaco-editor": "^0.59.0",
     "react-router-dom": "^7.8.2",
     "react-select": "^5.10.2",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
